2005-12-30  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/config-std.h: Include config-int.h before everything
	to be sure to include inttypes.h first.

	* kaffe/kaffevm/javacall.c
	(KaffeVM_callMethodA): Do not use args after having called
	sysdepCallMethod.

	* kaffe/kaffevm/systems/unix-pthreads/thread-internal.h
	(jthread_t): Use int and not char for status (fix unalignment
	problems on alpha).

	* libraries/clib/nio/gnu_java_nio_VMSelector.c:
	Include jni.h first.

	* config/alpha/osf/md.c:
	(init_md): Only initialize excLock if LIBEXC is defined.
	
	* config/alpha/osd/md.h
	(SIGNAL_ARGS, SIGNAL_CONTEXT_POINTER, GET_SIGNAL_CONTEXT_POINTER,
	SIGNAL_PC): Defined.
	Include kaffe-unix-stack.h

2005-12-29 Alexander Boettcher  <alex@kaffe.org>

	* kaffe/kaffevm/system/drops-l4threads/jthread.h,
	  kaffe/kaffevm/system/drops-l4threads/lock-impl.h:
	  jthread_interrupt & semaphore fix
	  - test/regression/ThreadInterrupt.java pass successful now
	
2005-12-28 Dalibor Topic  <robilad@kaffe.org>

	* WHATSNEW, TODO: Updated.

2005-12-28 Dalibor Topic  <robilad@kaffe.org>

	* developers/README: Added test-kaffe-sh.
	* developers/test-kaffe-sh: New file.

2005-12-28 Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/zlib/ : Merged in zlib 1.2.3 from gcc.

	* THIRDPARTY: Added zlib.

	* configure.ac: (--with-internal-zlib) New option.

	* libraries/clib/zip/Makefile.am: Adapted to allow use
	of internal zlib.

	* libraries/clib/Makefile.am: Use internal zlib if selected.

2005-12-28  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/locks.c
	(putHeavyLock): Do not atomic ops for hlockHolder as
	it is not necessary.

2005-12-27  Dalibor Topic  <robilad@kaffe.org>

	config/alpha/atomic.h,
	config/ia64/atomic.h,
	config/m68k/atomic.h,
	config/s390/atomic.h:
	Include config-int.h instead of stdint.h
	
2005-12-27  Dalibor Topic  <robilad@kaffe.org>

	* config/x86_64/atomic.h: Include config-int.h instead of stdint.h

2005-12-26  Dalibor Topic  <robilad@kaffe.org>
