@@ -1,3 +1,8 @@
+2005-12-31  Ito Kazumitsu  <kaz@maczuka.gcd.org>
+
+	* tools/javatools/javalib/gnu/classpath/tools/native2ascii/Native2ASCII.java:
+	Copied from GNU Classpath (some bugs fixed).
+
 2005-12-30  Guilhem Lavaux  <guilhem@kaffe.org>
 
 	* config/config-std.h: Include config-int.h before everything
